business process page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21146

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Data.SQL/Vanrise.BusinessProcess.Data.SQL.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Data.SQL/Vanrise.BusinessProcess.Data.SQL.csproj
@@ -74,6 +74,9 @@
       <Name>Vanrise.BusinessProcess.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
