--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Web.config
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=TOneTransactionDB;User ID=sa; Password=P@ssw0rd" />
-    <add name="LogDBConnString" connectionString="Data Source=.;Initial Catalog=TOneWFTracking;User ID=sa; Password=P@ssw0rd" />
+    <add name="BusinessProcessDBConnString" connectionString="Data Source=.;Initial Catalog=TOneTransactionDB;User ID=sa; Password=P@ssw0rd" />
+    <add name="BusinessProcessTrackingDBConnString" connectionString="Data Source=.;Initial Catalog=TOneWFTracking;User ID=sa; Password=P@ssw0rd" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -25,6 +25,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+        <defaultDocument>
+            <files>
+                <add value="Index.cshtml" />
+            </files>
+        </defaultDocument>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
