fixed connection strings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21152

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Web.config
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BusinessProcessDBConnString" connectionString="Data Source=.;Initial Catalog=TOneTransactionDB;Integrated Security=SSPI;Persist Security Info=False;" />
-    <add name="BusinessProcessTrackingDBConnString" connectionString="Data Source=.;Initial Catalog=TOneWFTracking;Integrated Security=SSPI;Persist Security Info=False;" />
+    <add name="BusinessProcessDBConnString" connectionString="Data Source=.;Initial Catalog=TOneTransactionDB;User ID=sa; Password=P@ssw0rd" />
+    <add name="BusinessProcessTrackingDBConnString" connectionString="Data Source=.;Initial Catalog=TOneWFTracking;User ID=sa; Password=P@ssw0rd" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
