--- a/TOneV2/Code/TOneV2/TOne.CDR.Data.SQL/TOne.CDR.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Data.SQL/TOne.CDR.Data.SQL.csproj
@@ -65,6 +65,10 @@
       <Project>{53916714-c501-4613-907f-d5f33b78c3f0}</Project>
       <Name>TABS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.BusinessEntity.Entities\TOne.BusinessEntity.Entities.csproj">
+      <Project>{70ce755d-00ae-4e12-8f07-e4df91346293}</Project>
+      <Name>TOne.BusinessEntity.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.CDR.Data\TOne.CDR.Data.csproj">
       <Project>{9d556d54-f769-41af-843d-dff72384df32}</Project>
       <Name>TOne.CDR.Data</Name>
