--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -152,7 +152,7 @@
     <Content Include="Client\Javascripts\Controllers\DefaultController.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\RouteRuleEditorController.js" />
     <Content Include="Client\Javascripts\Controllers\TestViewController.js" />
-    <Content Include="Client\Javascripts\Directives\VInputDirective.js" />
+    <Content Include="Client\Javascripts\Directives\VTextboxDirective.js" />
     <Content Include="Client\Javascripts\Modules\appControllers.js" />
     <Content Include="Client\Javascripts\Modules\mainModule.js" />
     <Content Include="Client\Javascripts\Modules\appRouting.js" />
@@ -237,8 +237,8 @@
     <Content Include="Client\Libraries\Semantic\themes\default\assets\fonts\icons.svg" />
     <Content Include="Client\Libraries\Semantic\themes\default\assets\images\flags.png" />
     <Content Include="Client\Styles\Styles.css" />
-    <Content Include="Client\Templates\Directives\VInputIcon.html" />
-    <Content Include="Client\Templates\Directives\VInputStandard.html" />
+    <Content Include="Client\Templates\Directives\VTextboxIcon.html" />
+    <Content Include="Client\Templates\Directives\VTextboxStandard.html" />
     <Content Include="Client\Views\Default.html" />
     <Content Include="Client\Views\Routing\RouteRuleEditor.html" />
     <Content Include="Client\Views\TestView.html" />
