1.Add Customer/Supplier Zone Rates 2. Update Code Match Activity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21207

--- a/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
@@ -78,6 +78,9 @@
     <Compile Include="CreateIndexesOnCodeMatchTable.cs" />
     <Compile Include="DropOldRoutingDatabases.cs" />
     <Compile Include="GetCodePrefixGroup.cs" />
+    <Compile Include="GetCodes.cs" />
+    <Compile Include="GetSupplierZoneRates.cs" />
+    <Compile Include="GetCustomerZoneRates.cs" />
     <Compile Include="LoadZoneRatesFromRate.cs" />
     <Compile Include="PrepareZoneInfosForDBApply.cs" />
     <Compile Include="PrepareCodeMatchesForDBApply.cs" />
