--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -68,32 +68,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplyCDRsToDB.cs" />
-    <Compile Include="ApplyInvalidCDRsToDB.cs" />
-    <Compile Include="ApplyMainCDRsToDB.cs" />
-    <Compile Include="Entities\CDRBatch.cs" />
-    <Compile Include="Entities\CDRBillingBatch.cs" />
-    <Compile Include="Entities\CDRInvalidBatch.cs" />
-    <Compile Include="Entities\CDRMainBatch.cs" />
-    <Compile Include="Entities\CDRManager.cs" />
     <Compile Include="ClearTimeRangeBillingRecords.cs" />
     <Compile Include="CreateBillingAndStatsTables.cs" />
     <Compile Include="DivideDayIntoTimeRanges.cs" />
+    <Compile Include="Entities\CDRBatch.cs" />
     <Compile Include="Entities\CDRBatchProcessor.cs" />
+    <Compile Include="Entities\CDRBillingBatch.cs" />
+    <Compile Include="Entities\CDRManager.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
     <Compile Include="ImportCDRs.cs" />
-    <Compile Include="PrepareCDRsForDBApply.cs" />
     <Compile Include="ProcessBillingCDR.cs" />
-    <Compile Include="ProcessCDRs.cs" />
-    <Compile Include="GetCDRs.cs" />
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
-    <Compile Include="ProcessBillingCDRs.cs" />
+    <Compile Include="ProcessCDRs.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="ProcessRawCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveCDRsToDB.cs" />
-    <Compile Include="SaveCDRsToQueue.cs" />
-    <Compile Include="SaveMainCDRsToDB.cs" />
     <Compile Include="StoreCDRsToDB.cs" />
     <Compile Include="StoreInvalidCDRsToDB.cs" />
     <Compile Include="StoreMainCDRsToDB.cs" />
@@ -145,6 +136,7 @@
       <Name>TOne.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
