--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=ToneDevTest01;User ID=Development;Password=dev!123" />
+    <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=NetTalkForDev;User ID=Development;Password=dev!123" />-->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
