Add Textbox button
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21263

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -279,6 +279,7 @@
     <Content Include="Client\Libraries\Semantic\themes\default\assets\images\flags.png" />
     <Content Include="Client\Styles\ng-sortable.style.css" />
     <Content Include="Client\Styles\Styles.css" />
+    <Content Include="Client\Templates\Directives\VTextboxButton.html" />
     <Content Include="Client\Templates\Directives\VTextboxIcon.html" />
     <Content Include="Client\Templates\Directives\VTextboxStandard.html" />
     <Content Include="Client\Views\Default.html" />
