--- a/TOneV2/Code/TOneV2/TOne.CDR.Data.SQL/TOne.CDR.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Data.SQL/TOne.CDR.Data.SQL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CDRDataManager.cs" />
     <Compile Include="CDRTargetDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrafficStatisticDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TABS\TABS.csproj">
