--- a/TOneV2/Code/TOneV2/TOne.CDR.Data/TOne.CDR.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Data/TOne.CDR.Data.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ICDRDataManager.cs" />
     <Compile Include="ICDRTargetDataManager.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="ITrafficStatisticDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
