--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AnalyticsController.cs" />
     <Compile Include="Controllers\BusinessEntityController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -316,6 +317,22 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TOne.Analytics.Business\TOne.Analytics.Business.csproj">
+      <Project>{1d2c62ce-4f44-474e-84ef-44579a454dea}</Project>
+      <Name>TOne.Analytics.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.Analytics.Data.SQL\TOne.Analytics.Data.SQL.csproj">
+      <Project>{a8f33d21-6ccb-49df-a71c-6653eca0c45d}</Project>
+      <Name>TOne.Analytics.Data.SQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.Analytics.Data\TOne.Analytics.Data.csproj">
+      <Project>{c7d60145-89ba-461c-aa71-b37636dd2541}</Project>
+      <Name>TOne.Analytics.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.Analytics.Entities\TOne.Analytics.Entities.csproj">
+      <Project>{d23495a3-bf94-4a57-973d-8b3b384fc0a8}</Project>
+      <Name>TOne.Analytics.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.BusinessEntity.Business\TOne.BusinessEntity.Business.csproj">
       <Project>{bdc9694f-88b7-492d-9865-304e774a5776}</Project>
       <Name>TOne.BusinessEntity.Business</Name>
