Add views Template
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21296

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -285,6 +285,7 @@
     <Content Include="Client\Templates\Directives\VTextboxButton.html" />
     <Content Include="Client\Templates\Directives\VTextboxIcon.html" />
     <Content Include="Client\Templates\Directives\VTextboxStandard.html" />
+    <Content Include="Client\Templates\Views\VGridviewV1.html" />
     <Content Include="Client\Views\Default.html" />
     <Content Include="Client\Views\Routing\RouteRuleEditor.html" />
     <Content Include="Client\Views\TestView.html" />
