added zing chart and high chart
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21306

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -178,8 +178,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
-    <Content Include="Client\Javascripts\Controllers\Chart1Controller.js" />
+    <Content Include="Client\Javascripts\Controllers\ZingChartController.js" />
     <Content Include="Client\Javascripts\Controllers\DefaultController.js" />
+    <Content Include="Client\Javascripts\Controllers\HighChartController.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\RouteRuleEditorController.js" />
     <Content Include="Client\Javascripts\Controllers\TestViewController.js" />
     <Content Include="Client\Javascripts\Directives\VGridviewDirective.js" />
@@ -207,6 +208,9 @@
     <Content Include="Client\Libraries\Bootstrap\bootstrap.js" />
     <Content Include="Client\Libraries\Bootstrap\ui-bootstrap-0.12.1.min.js" />
     <Content Include="Client\Libraries\Bootstrap\ui-bootstrap-tpls-0.12.1.min.js" />
+    <Content Include="Client\Libraries\Charts\HichChart\highcharts-3d.js" />
+    <Content Include="Client\Libraries\Charts\HichChart\highcharts.js" />
+    <Content Include="Client\Libraries\Charts\ZingChart\zingchart.min.js" />
     <Content Include="Client\Libraries\JQuery\jquery-2.1.3.min.js" />
     <Content Include="Client\Libraries\Semantic -old2\semantic.min.css" />
     <Content Include="Client\Libraries\Semantic -old2\semantic.min.js" />
@@ -287,8 +291,9 @@
     <Content Include="Client\Templates\Directives\VTextboxIcon.html" />
     <Content Include="Client\Templates\Directives\VTextboxStandard.html" />
     <Content Include="Client\Templates\Views\VGridviewV1.html" />
-    <Content Include="Client\Views\Chart1.html" />
+    <Content Include="Client\Views\ZingChart.html" />
     <Content Include="Client\Views\Default.html" />
+    <Content Include="Client\Views\HighChart.html" />
     <Content Include="Client\Views\Routing\RouteRuleEditor.html" />
     <Content Include="Client\Views\TestView.html" />
     <Content Include="favicon.ico" />
