git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21315

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
@@ -151,6 +151,9 @@
     <Compile Include="NumberProfile.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="NumberProfileNew.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="OperationType.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -186,6 +189,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="ReportingStatu.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Set_CallClass.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Set_CallType.cs">
