--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AnalyticsController.cs" />
     <Compile Include="Controllers\BusinessEntityController.cs" />
+    <Compile Include="Controllers\ChartTestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -178,9 +179,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
-    <Content Include="Client\Javascripts\Controllers\ZingChartController.js" />
+    <Content Include="Client\Javascripts\Controllers\ChartPrototypes\CanvasJSChartController.js" />
+    <Content Include="Client\Javascripts\Controllers\ChartPrototypes\FusionChartController.js" />
+    <Content Include="Client\Javascripts\Controllers\ChartPrototypes\HighChartSparklineController.js" />
+    <Content Include="Client\Javascripts\Controllers\ChartPrototypes\ZingChartController.js" />
     <Content Include="Client\Javascripts\Controllers\DefaultController.js" />
-    <Content Include="Client\Javascripts\Controllers\HighChartController.js" />
+    <Content Include="Client\Javascripts\Controllers\ChartPrototypes\HighChartController.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\RouteRuleEditorController.js" />
     <Content Include="Client\Javascripts\Controllers\TestViewController.js" />
     <Content Include="Client\Javascripts\Directives\VGridviewDirective.js" />
@@ -208,6 +212,20 @@
     <Content Include="Client\Libraries\Bootstrap\bootstrap.js" />
     <Content Include="Client\Libraries\Bootstrap\ui-bootstrap-0.12.1.min.js" />
     <Content Include="Client\Libraries\Bootstrap\ui-bootstrap-tpls-0.12.1.min.js" />
+    <Content Include="Client\Libraries\Charts\CanvasChart\canvasjs.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\fusioncharts.charts.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\fusioncharts.gantt.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\fusioncharts.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\fusioncharts.maps.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\fusioncharts.powercharts.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\fusioncharts.widgets.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\maps\fusioncharts.usa.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\maps\fusioncharts.world.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\maps\readme.txt" />
+    <Content Include="Client\Libraries\Charts\FusionChart\themes\fusioncharts.theme.carbon.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\themes\fusioncharts.theme.fint.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\themes\fusioncharts.theme.ocean.js" />
+    <Content Include="Client\Libraries\Charts\FusionChart\themes\fusioncharts.theme.zune.js" />
     <Content Include="Client\Libraries\Charts\HichChart\highcharts-3d.js" />
     <Content Include="Client\Libraries\Charts\HichChart\highcharts.js" />
     <Content Include="Client\Libraries\Charts\ZingChart\zingchart.min.js" />
@@ -291,9 +309,12 @@
     <Content Include="Client\Templates\Directives\VTextboxIcon.html" />
     <Content Include="Client\Templates\Directives\VTextboxStandard.html" />
     <Content Include="Client\Templates\Views\VGridviewV1.html" />
-    <Content Include="Client\Views\ZingChart.html" />
+    <Content Include="Client\Views\ChartPrototypes\CanvasJSChart.html" />
+    <Content Include="Client\Views\ChartPrototypes\FusionChart.html" />
+    <Content Include="Client\Views\ChartPrototypes\HighChartSparkline.html" />
+    <Content Include="Client\Views\ChartPrototypes\ZingChart.html" />
     <Content Include="Client\Views\Default.html" />
-    <Content Include="Client\Views\HighChart.html" />
+    <Content Include="Client\Views\ChartPrototypes\HighChart.html" />
     <Content Include="Client\Views\Routing\RouteRuleEditor.html" />
     <Content Include="Client\Views\TestView.html" />
     <Content Include="favicon.ico" />
