--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -187,8 +187,8 @@
     <Content Include="Client\Javascripts\Controllers\ChartPrototypes\HighChartController.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\RouteRuleEditorController.js" />
     <Content Include="Client\Javascripts\Controllers\TestViewController.js" />
-    <Content Include="Client\Javascripts\Directives\VGridviewDirective.js" />
-    <Content Include="Client\Javascripts\Directives\VTextboxDirective.js" />
+    <Content Include="Client\Javascripts\Directives\vr-gridview-directive.js" />
+    <Content Include="Client\Javascripts\Directives\vr-textbox-directive.js" />
     <Content Include="Client\Javascripts\Modules\appControllers.js" />
     <Content Include="Client\Javascripts\Modules\mainModule.js" />
     <Content Include="Client\Javascripts\Modules\appRouting.js" />
@@ -304,11 +304,11 @@
     <Content Include="Client\Libraries\Semantic\themes\default\assets\images\flags.png" />
     <Content Include="Client\Styles\ng-sortable.style.css" />
     <Content Include="Client\Styles\Styles.css" />
-    <Content Include="Client\Templates\Directives\VGridviewStandard.html" />
-    <Content Include="Client\Templates\Directives\VTextboxButton.html" />
-    <Content Include="Client\Templates\Directives\VTextboxIcon.html" />
-    <Content Include="Client\Templates\Directives\VTextboxStandard.html" />
-    <Content Include="Client\Templates\Views\VGridviewV1.html" />
+    <Content Include="Client\Templates\Directives\vr-gridview-standard.html" />
+    <Content Include="Client\Templates\Directives\vr-textbox-button.html" />
+    <Content Include="Client\Templates\Directives\vr-textbox-icon.html" />
+    <Content Include="Client\Templates\Directives\vr-textbox-standard.html" />
+    <Content Include="Client\Templates\Views\vr-gridview-v1.html" />
     <Content Include="Client\Views\ChartPrototypes\CanvasJSChart.html" />
     <Content Include="Client\Views\ChartPrototypes\FusionChart.html" />
     <Content Include="Client\Views\ChartPrototypes\HighChartSparkline.html" />
